// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render skip 1`] = `
<_class
  emulateUnlessSupported={true}
  style={
    Object {
      "position": "absolute",
      "right": 10,
      "top": 0,
    }
  }
>
  <Button
    buttonTextStyle={
      Array [
        Object {
          "color": "#ffffff",
        },
        undefined,
      ]
    }
    onPress={[MockFunction]}
    style={
      Array [
        Object {
          "padding": 15,
        },
        undefined,
      ]
    }
    testID="skipButton"
    text="SKIP"
    type="transparent"
  />
</_class>
`;

exports[`renders skip with style 1`] = `
<_class
  emulateUnlessSupported={true}
  style={
    Object {
      "position": "absolute",
      "right": 10,
      "top": 0,
    }
  }
>
  <Button
    buttonTextStyle={
      Array [
        Object {
          "color": "#ffffff",
        },
        undefined,
      ]
    }
    onPress={[MockFunction]}
    style={
      Array [
        Object {
          "padding": 15,
        },
        Object {
          "padding": 5,
        },
      ]
    }
    testID="skipButton"
    text="SKIP"
    type="transparent"
  />
</_class>
`;

exports[`renders skip with text style 1`] = `
<_class
  emulateUnlessSupported={true}
  style={
    Object {
      "position": "absolute",
      "right": 10,
      "top": 0,
    }
  }
>
  <Button
    buttonTextStyle={
      Array [
        Object {
          "color": "#ffffff",
        },
        Object {
          "padding": 5,
        },
      ]
    }
    onPress={[MockFunction]}
    style={
      Array [
        Object {
          "padding": 15,
        },
        undefined,
      ]
    }
    testID="skipButton"
    text="SKIP"
    type="transparent"
  />
</_class>
`;
